// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSSObservingModeTable Component Render the RSSObservingModeTable Component having populated props with no errors 1`] = `
<RSSObservingModeTable
  proposals={
    Array [
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
>
  <div
    className="stat-item"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <h2>
      RSS Observing Mode
    </h2>
    <table
      className="stat-table"
    >
      <thead>
        <tr>
          <th>
            Observing mode
          </th>
          <th>
            Number of Proposals
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Fabry Perot
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            FP polarimetry
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            MOS
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            MOS polarimetry
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Polarimetric imaging
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Imaging
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Spectropolarimetry
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Spectroscopy
          </td>
          <td>
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</RSSObservingModeTable>
`;

exports[`RSSObservingModeTable Component Render the RSSObservingModeTable Component having unpopulated props with no errors 1`] = `
<RSSObservingModeTable
  proposals={Array []}
>
  <div
    className="stat-item"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <h2>
      RSS Observing Mode
    </h2>
    <table
      className="stat-table"
    >
      <thead>
        <tr>
          <th>
            Observing mode
          </th>
          <th>
            Number of Proposals
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Fabry Perot
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            FP polarimetry
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            MOS
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            MOS polarimetry
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Polarimetric imaging
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Imaging
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Spectropolarimetry
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Spectroscopy
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</RSSObservingModeTable>
`;
